# PostQuantum

./: .gitignore  README.md  RUN_EXPERIMENTS_README.md  pyproject.toml  requirements.txt
docs/: PAPER_DRAFT.md  paper.tex  references.bib
scripts/: aggregate_paper_stats.py  build_variant_figures.py  compare_backends.py  generate_figures.py  plot_backend_comparison.py  plot_mde_sweep.py  run_local_experiments.sh  run_paper_experiments.sh
src/mlkem_leakage/: __init__.py  analysis.py  backends.py  cli.py  collector.py  palette.py  paper_artifacts.py
tests/: test_analysis.py  test_cli.py  test_collector.py  test_paper_artifacts.py
